# twag

./: .gitattributes  .gitignore  .rustfmt.toml  .sqlfluff  AGENTS.md  COPYING.txt  Cargo.toml  Dockerfile  README.markdown  app.json  hk.pkl
.config/: mise.toml
.github/instructions/: copilot-instructions.md
.sqlx/: query-32ad920c4d1319a78163c819504b8b1da7c4a0387d0b0fb5e2df8a18c3a56264.json  query-a120417386405755b5823ba5c26af52bf69822ac59dea8abe0a33443633909bc.json
migrations/: 20250517214439_create_initial_schema.sql
provisioning/: grants.sql
scripts/: sqlx-check.sh
src/: main.rs  models.rs
templates/: tag_create.html
