[package]
name = "twag"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
lazy-regex = "3.4.1"
regex = "1.11.1"
sqlx = { version = "0.8", features = [
   "runtime-tokio",
   "tls-native-tls",
   "postgres",
   "macros",
   "time",
] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
