[package]
name = "twag"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
lazy-regex = "3.4.1"
notion-client = { git = "https://github.com/ELLIOTTCABLE/rust-notion-client.git", branch = "fix-db-icon" }
regex = "1.11.1"
serde = "1.0.219"
serde-hex = "0.1.0"
sqlx = { version = "0.8", features = [
   "runtime-tokio",
   "tls-native-tls",
   "postgres",
   "macros",
   "time",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = [
   "env-filter",
   "chrono",
   "json",
] }
url = "2.5.4"
